WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309199
[WGSL] webgpu:shader,validation,uniformity,uniformity:* is failing
https://bugs.webkit.org/show_bug.cgi?id=309199
Summary
[WGSL] webgpu:shader,validation,uniformity,uniformity:* is failing
Tadeu Zagallo
Reported
2026-03-04 15:50:32 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-04 15:50:39 PST
<
rdar://problem/171757884
>
Tadeu Zagallo
Comment 2
2026-03-04 15:56:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59928
EWS
Comment 3
2026-03-10 12:57:46 PDT
Committed
309007@main
(b7f96d97a9a5): <
https://commits.webkit.org/309007@main
> Reviewed commits have been landed. Closing PR #59928 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug