[WGSL] webgpu:shader,validation,uniformity,uniformity:* is failing https://bugs.webkit.org/show_bug.cgi?id=309199 rdar://171757884

Reviewed by Mike Wyrzykowski.

Introduce the UniformityAnalysis pass that verifies whether the shader satifies
the uniformity rules according to the spec[1]. The pass builds a control flow
graph and uses the algorithm outline in section 15.2.3.

[1]: https://www.w3.org/TR/WGSL/#uniformity

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/uniformity/uniformity-expected.txt:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebGPU/WGSL/AST/ASTLoopStatement.h:
* Source/WebGPU/WGSL/AST/ASTStatement.h:
(WGSL::AST::Statement::behaviors const):
(WGSL::AST::Statement::setBehaviors):
* Source/WebGPU/WGSL/AttributeValidator.cpp:
(WGSL::AttributeValidator::visit):
* Source/WebGPU/WGSL/CMakeLists.txt:
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::analyze):
* Source/WebGPU/WGSL/TypeDeclarations.rb:
* Source/WebGPU/WGSL/UniformityAnalysis.cpp: Added.
(WGSL::uniformityAnalysis):
* Source/WebGPU/WGSL/UniformityAnalysis.h: Added.
* Source/WebGPU/WGSL/WGSL.cpp:
(WGSL::staticCheck):
* Source/WebGPU/WebGPU.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/309007@main