Source/WebGPU/WGSL/AST/ASTLoopStatement.h
@@ -46,6 +46,9 @@ public:
     void setContainsSwitch() { m_containsSwitch = true; }
     bool containsSwitch() const { return m_containsSwitch; }
 
+    Behaviors bodyBehaviors() const { return m_bodyBehaviors; }
+    void setBodyBehaviors(Behaviors behaviors) { m_bodyBehaviors = behaviors; }
+
 private:
     LoopStatement(SourceSpan span, Attribute::List&& attributes, Statement::List&& body, std::optional<Continuing>&& continuing)
         : Statement(span)
@@ -59,6 +62,7 @@ private:
     std::optional<Continuing> m_continuing;
 
     bool m_containsSwitch { false };
+    Behaviors m_bodyBehaviors;
 };
 
 } // namespace WGSL::AST
