Source/WebGPU/WGSL/AST/ASTStatement.h
@@ -27,9 +27,18 @@
 
 #include "ASTBuilder.h"
 #include "ASTNode.h"
+#include <wtf/OptionSet.h>
 #include <wtf/ReferenceWrapperVector.h>
 
 namespace WGSL::AST {
+
+enum class Behavior : uint8_t {
+    Return = 1 << 0,
+    Break = 1 << 1,
+    Continue = 1 << 2,
+    Next = 1 << 3,
+};
+using Behaviors = OptionSet<Behavior>;
 
 class Statement : public Node {
     WGSL_AST_BUILDER_NODE(Statement);
@@ -38,10 +47,16 @@ public:
     using Ptr = Statement*;
     using List = ReferenceWrapperVector<Statement>;
 
+    Behaviors behaviors() const { return m_behaviors; }
+    void setBehaviors(Behaviors behaviors) { m_behaviors = behaviors; }
+
 protected:
     Statement(SourceSpan span)
         : Node(span)
     { }
+
+private:
+    Behaviors m_behaviors;
 };
 
 } // namespace WGSL::AST
